# hr-report-generator-CloudRun

./: .gcloudignore  .gitignore  .replit  Dockerfile  README.md  build_index.py  main.py  pyproject.toml  requirements.txt  run_dev.sh
prompts/: default_report.txt
static/: script.js  style.css
templates/: index.html
vectorstore/db_faiss/: index.faiss  index.pkl
