[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.8",
    "markdown>=3.8.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "python-dotenv>=1.1.1",
    "replit>=4.1.2",
]
